List manually created documents
