# src/functions/create-timed-curation/handler.ts
@@ -33,7 +33,7 @@ const createTimedCuration: ValidatedEventAPIGatewayProxyEvent<typeof schema> = a
     };
   }
 
-  const documentIds = [ ...promoted, ...hidden || [] ];
+  const documentIds = [ ...promoted, ...hidden ];
 
   const documents = await Promise.all(
     documentIds.map(async documentId => ({
@@ -51,10 +51,9 @@ const createTimedCuration: ValidatedEventAPIGatewayProxyEvent<typeof schema> = a
     }
   }
 
-  // TODO this will handle manual document curation as is currently set up in UI, curating only one at a time. If the manual document was part of a batch of promoted documents, it would not be stored as isManuallyCreated in the db.
   if (promoted.length === 1 && documents[0].data?.meta_content_category === ContentCategory.MANUAL) {
     const manualDocumentCuration = await timedCurationsService.createTimedCuration({
-      id: uuid(),
+      id: documents[0].id,
       promoted: promoted,
       hidden: hidden,
       queries: queries,
